style: format project with new formatter